fixed add-climb alignment

--- a/frontend/src/app/components/climbs/add-climb/add-climb.component.css
+++ b/frontend/src/app/components/climbs/add-climb/add-climb.component.css
@@ -9,7 +9,7 @@ mat-radio-group {
 .form-field {
     display: flex;
     flex-direction: column;
-    padding: 25px 100px;
+    padding: 10px 100px;
     /* background-color: black; */
 }
 
@@ -18,3 +18,6 @@ mat-radio-group {
     padding: 10px 0;
 }
 
+#addClimbForm {
+    width: 600px;
+}
